uncaughtExceptions.log
2020-06-01T08:36:00.437Z error: uncaughtException: Unexpected token ')'
C:\Users\Dumbo\Desktop\Node\todo-app\backend\startup\config.js:8
  ) {
  ^

SyntaxError: Unexpected token ')'
    at Module._compile (internal/modules/cjs/loader.js:891:18)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:991:10)
    at Module.load (internal/modules/cjs/loader.js:811:32)
    at Function.Module._load (internal/modules/cjs/loader.js:723:14)
    at Module.require (internal/modules/cjs/loader.js:848:19)
    at require (internal/modules/cjs/helpers.js:74:18)
    at Object.<anonymous> (C:\Users\Dumbo\Desktop\Node\todo-app\backend\index.js:11:1)
    at Module._compile (internal/modules/cjs/loader.js:955:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:991:10)
    at Module.load (internal/modules/cjs/loader.js:811:32)
    at Function.Module._load (internal/modules/cjs/loader.js:723:14)
    at Function.Module.runMain (internal/modules/cjs/loader.js:1043:10)
    at internal/main/run_main_module.js:17:11
2020-06-01T08:39:45.914Z error: uncaughtException: Configuration property "MONGODB_URI" is not defined
Error: Configuration property "MONGODB_URI" is not defined
    at Config.get (C:\Users\Dumbo\Desktop\Node\todo-app\backend\node_modules\config\lib\config.js:182:11)
    at module.exports (C:\Users\Dumbo\Desktop\Node\todo-app\backend\startup\dbInit.js:6:21)
    at Object.<anonymous> (C:\Users\Dumbo\Desktop\Node\todo-app\backend\index.js:10:28)
    at Module._compile (internal/modules/cjs/loader.js:955:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:991:10)
    at Module.load (internal/modules/cjs/loader.js:811:32)
    at Function.Module._load (internal/modules/cjs/loader.js:723:14)
    at Function.Module.runMain (internal/modules/cjs/loader.js:1043:10)
    at internal/main/run_main_module.js:17:11
2020-06-01T08:51:14.214Z error: uncaughtException: Cannot read property 'get' of undefined
TypeError: Cannot read property 'get' of undefined
    at Object.<anonymous> (C:\Users\Dumbo\Desktop\Node\todo-app\backend\index.js:15:32)
    at Module._compile (internal/modules/cjs/loader.js:955:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:991:10)
    at Module.load (internal/modules/cjs/loader.js:811:32)
    at Function.Module._load (internal/modules/cjs/loader.js:723:14)
    at Function.Module.runMain (internal/modules/cjs/loader.js:1043:10)
    at internal/main/run_main_module.js:17:11
